# pyline_notify

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: .env_example  main.py
src/pyline_notify/: __init__.py  notify.py
