[project]
name = "pyline-notify"
version = "1.2"
description = "Pythonのスクリプトの開始と終了時にLINE Notifyに通知するツール"
authors = [
    { name = "Mizuki", email = "mbaba@kanolab.net" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python_dotenv>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.flake8]
emax-line-length = 120
